--- a/src/django/rainmap/templates/registration/login.html
+++ b/src/django/rainmap/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Log In' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Glad to have you back!" %}
+    {% trans "Glad to have you back" %}
 {% endblock %}
 
 {% block content %}
