--- a/src/django/rainmap/templates/registration/logout.html
+++ b/src/django/rainmap/templates/registration/logout.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Logged Out' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "See you later." %}
+    {% trans "See you later" %}
 {% endblock %}
 
 {% block content %}
