--- a/src/django/rainmap/templates/registration/password_change_done.html
+++ b/src/django/rainmap/templates/registration/password_change_done.html
@@ -4,5 +4,5 @@
 {% block title %}{% trans 'Password Changed!' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Your password was changed successfully." %}
+    {% trans "Your password was changed successfully" %}
 {% endblock %}
