--- a/src/django/rainmap/templates/registration/password_reset_complete.html
+++ b/src/django/rainmap/templates/registration/password_reset_complete.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Password Reset' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Your password was reset." %}
+    {% trans "Your password was reset" %}
 {% endblock %}
 
 {% block content %}
