--- a/src/django/rainmap/templates/registration/password_reset_done.html
+++ b/src/django/rainmap/templates/registration/password_reset_done.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Password Reset' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "You requested that we reset your password." %}
+    {% trans "You requested that we reset your password" %}
 {% endblock %}
 
 {% block content %}
