--- a/src/django/rainmap/templates/core/dashboard.html
+++ b/src/django/rainmap/templates/core/dashboard.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Dashboard' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Welcome back." %}
+    {% trans "Welcome back" %}
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
         <ol>
             {% for result in result_list.object_list %}
                 <li>
-                    <span class="result{% if not result.finished_ok %} attn{% endif %}"><a class="scan-name" href={% url core_scan_view result.for_scan.id %}>{{ result.for_scan.name }}</a> {% trans "finished about" %} <a href={% url core_result_view result.id %}>{{ result.run_on|timesince }}</a> {% trans "ago" %}</span>
+                    <span class="result{% if not result.finished_ok %} attn{% endif %}"><a class="name" href={% url core_scan_view result.for_scan.id %}>{{ result.for_scan.name }}</a> {% trans "finished about" %} <a href={% url core_result_view result.id %}>{{ result.run_on|timesince }}</a> {% trans "ago" %}</span>
                     <span class="ann"><a href={% url core_scan_run result.for_scan.id %}>{% trans "Rerun" %}</a></span>
                     <span class="ann del-ref"><a href={% url core_result_delete result.id %}>{% trans "Delete Result" %}</a></span>
                 </li>
