--- a/src/django/rainmap/templates/registration/password_change_form.html
+++ b/src/django/rainmap/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Change Password' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Need to change your password?" %}
+    {% trans "Change your password" %}
 {% endblock %}
 
 {% block content %}
