--- a/src/django/rainmap/templates/core/scan_edit.html
+++ b/src/django/rainmap/templates/core/scan_edit.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'Edit Scan' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Edit scan profile" %}
+    {% trans "Editing profile:" %}
 {% endblock %}
 
 {% block content %}
