--- a/src/django/rainmap/templates/core/scan_new.html
+++ b/src/django/rainmap/templates/core/scan_new.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans 'New Scan' %} | {{ block.super }}{% endblock %}
 
 {% block section_title %}
-    {% trans "Create a new scan profile" %}
+    {% trans "Create a new scan profile:" %}
 {% endblock %}
 
 {% block content %}
