--- a/src/django/rainmap/templates/insec/core/scan_view.html
+++ b/src/django/rainmap/templates/insec/core/scan_view.html
@@ -38,5 +38,7 @@
                 {% endif %}
             </span>
         </div>
+    {% else %}
+        <h4>{% trans "No results available." %}</h4>
     {% endif %}
 {% endblock content %}
