Improved contrast and layout for error message text.

--- a/src/public/media/css/base.less
+++ b/src/public/media/css/base.less
@@ -245,7 +245,8 @@ body {
         margin-top: @spacer / 4;
         margin-bottom: @spacer / 4;
         li {
-            width: 50%;
+            text-align: center;
+            width: 75%;
             margin-left: auto;
             margin-right: auto;
             padding: @spacer / 4;
@@ -256,7 +257,7 @@ body {
         }
         .error {
             background-color: @contrast;
-            color: @subtle;
+            color: @slate;
         }
     }
     .errorlist {
