--- a/src/public/media/css/base.css
+++ b/src/public/media/css/base.css
@@ -278,7 +278,8 @@ body {
   margin-bottom: 0.25em;
 }
 #content .messagelist li {
-  width: 50%;
+  text-align: center;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   padding: 0.25em;
@@ -289,7 +290,7 @@ body {
 }
 #content .messagelist .error {
   background-color: #cd1010;
-  color: #6e6e6e;
+  color: #f5f5f5;
 }
 #content .errorlist {
   margin: 0;
