--- a/src/django/rainmap/templates/insec/core/result_view.html
+++ b/src/django/rainmap/templates/insec/core/result_view.html
@@ -15,8 +15,12 @@
         <span class="ann del-ref"><a href={% url core_result_delete result.id %}>{% trans "Delete This Result" %}</a></span>
     </div>
     <hr />
-    <iframe src={{ resloc }} width="100%" height="600" seamless>
-        <p>{% trans "Your browser doesn't have support for iframes, and we can't display the scan result." %}</p>
-    </iframe>
+    {% if resloc %}
+        <iframe class="resframe" src={{ resloc }} width="100%" height="600" seamless>
+            <p>{% trans "Your browser doesn't have support for iframes, and we can't display the scan result." %}</p>
+        </iframe>
+    {% else %}
+        <p>{% trans "No output has been saved for this scan. This is likely due to a problem on our end, and an administrator has been notified. Sorry =(" %}
+    {% endif %}
 
 {% endblock content %}
