Improved display of scan states: if the scan has completed, it's shown as such, otherwise the starting time is shown.

--- a/src/django/rainmap/templates/default/core/dashboard.html
+++ b/src/django/rainmap/templates/default/core/dashboard.html
@@ -13,7 +13,7 @@
         <ol>
             {% for result in result_list.object_list %}
                 <li>
-                    <span class="result{% if not result.finished_ok %} attn{% endif %}"><a class="name" href={% url core_scan_view result.for_scan.id %}>{{ result.for_scan.name }}</a> {% trans "finished about" %} <a class="res" href={% url core_result_view result.id %}>{{ result.finished_on|timesince }}</a> {% trans "ago" %}</span>
+                    <span class="result{% if result.finished_on and not result.finished_ok %} attn{% endif %}"><a class="name" href={% url core_scan_view result.for_scan.id %}>{{ result.for_scan.name }}</a>{% if result.finished_on %}{% trans "finished about" %} <a class="res" href={% url core_result_view result.id %}>{{ result.finished_on|timesince }}</a>{% else %}{% trans "was started" %} {{ result.started_on|timesince }}{% endif %} {% trans "ago" %}</span>
                     <div class="actions">
                         <span class="ann"><a href={% url core_scan_run result.for_scan.id %}>{% trans "Rerun" %}</a></span>
                         <span class="ann del-ref"><a href={% url core_result_delete result.id %}>{% trans "Delete Result" %}</a></span>
