--- a/src/django/rainmap/templates/insec/core/guestview.html
+++ b/src/django/rainmap/templates/insec/core/guestview.html
@@ -2,9 +2,15 @@
 {% load i18n %}
 
 {% block section_title %}
-    {% trans "Hello, welcome to Rainmap" %}
+    {% trans "Hello and welcome to Nscan!" %}
 {% endblock %}
 
 {% block content %}
-    <p>{% trans "Rainmap lets you scan your computer network and see what's exposed to would-be attackers, worms and viruses." %}</p>
+    <p>{% trans "Nscan lets you scan your computer network and see what's exposed to would-be attackers, worms and viruses." %}</p>
+{% endblock %}
+
+{% block footer %}
+    {% blocktrans %}
+        <p>This site is for the Nmap Project's Nscan online scanning service. Averk's Nscan port scanning software can now be found at <a href="http://www.averk.net/nscan">http://www.averk.net/nscan</a>.</p>
+    {% endblocktrans %}
 {% endblock %}
