--- a/src/django/rainmap/templates/insec/registration/logout.html
+++ b/src/django/rainmap/templates/insec/registration/logout.html
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-    <p>{% trans "You're now securely logged out. Thanks for using Rainmap to keep your networks safe." %}</p>
+    <p>{% trans "You're now securely logged out. Thanks for using Nscan to keep your networks safe." %}</p>
 {% endblock %}
